# scrap.shinyaigeek.dev

./: Cargo.toml
frontend/: firebaseAdmin.ts  next.config.js  package.json  scrap-shinyaigeek-dev-firebase-adminsdk-9geul-3b428d381c.json
frontend/components/common/Header/: Header.tsx
frontend/components/common/useAuthUser/: context.tsx  (+1 more)
frontend/hooks/useAuthUser/: context.tsx  reducer.tsx  useAuthUser.tsx
frontend/hooks/useBuildCommentForm/: useBuildCommentForm.tsx
frontend/hooks/useBuildThreadForm/: useBuildThreadForm.tsx
frontend/pages/: _app.tsx  build_thread.tsx  index.tsx
frontend/pages/api/: session.ts
frontend/pages/threads/: [slug].tsx
frontend/server/: repository-base.ts
migrations/2021-05-26-103256_create_threads/: down.sql  up.sql
migrations/2021-06-01-013841_create_users/: up.sql
migrations/2021-06-08-043015_create_comments/: up.sql
migrations/2022-04-23-061432_tags/: up.sql
migrations/2022-04-23-063929_rel_tag_thread/: down.sql  up.sql
src/: main.rs  schema.rs
src/auth/: get_gh_info_with_token.rs  mod.rs
src/db/: mod.rs
src/db/_models/: comments.rs  mod.rs  rel_tag_thread.rs  tags.rs  threads.rs  users.rs
src/db/_repositories/: mod.rs
src/db/_schemas/: comments.rs  mod.rs  rel_tag_thread.rs  tags.rs  threads.rs  users.rs
src/db/applications/: mod.rs
src/db/connection/: establish.rs  mod.rs
src/routes/: mod.rs
src/routes/comments/: create.rs  mod.rs  read.rs
src/routes/threads/: create.rs  read.rs
src/routes/users/: signin.rs
src/routes/util/: make_error_response_body.rs  mod.rs
src/util/: http_client.rs
(+30 files in other folders)
