[package]
name = "scrap-shinyaigeek-dev"
version = "0.1.0"
authors = ["shinyaigeek <PhilisPaxil@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "=4.0.0-beta.5"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
actix-rt = "2"
actix-cors = "0.6.0-beta.1"
actix-http = "=3.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
serde_json = "1.0"
serde = "1.0"
tokio = { version = "1", features = ["full"] }