[package]
name = "scrap-shinyaigeek-dev"
version = "0.1.0"
authors = ["shinyaigeek <PhilisPaxil@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "=4.0.1"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
actix-rt = "2"
actix-cors = "0.6.1"
actix-http = "=3.0.4"
actix-service = "=2.0.2"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
serde_json = "1.0.59"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1", features = ["full"] }